chore: fixed video on mobile

--- a/assets/css/partials/helpers.scss
+++ b/assets/css/partials/helpers.scss
@@ -338,9 +338,16 @@
 
 .desktop {
     display: none;
+    video {
+        display: none;
+    }
 
     @include breakpoint('md') {
         display: block;
+
+        video {
+            display: block;
+        }
     }
 
 }
