--- a/assets/css/partials/team.scss
+++ b/assets/css/partials/team.scss
@@ -70,7 +70,6 @@ span.cursor.hidden {
     height: 13.002px;
     position: relative;
     font-size:45px;
-    left: 392px;
     top: 20px;
     transform: rotate(135deg);
     flex-shrink: 0;
